# shinosawa

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
doc/: memory.md
ovmf/: OVMF_VARS.4m.fd
rootfs/limine/: limine.conf
shinosawa/system/kernel/: Cargo.toml  README.md  build.rs
shinosawa/system/kernel/src/: interrupt.rs  limine.rs  main.rs  panic.rs  syscall.rs  tests.rs
shinosawa/system/kernel/src/acpi/: mod.rs
shinosawa/system/kernel/src/drivers/: ps2_keyboard.rs
shinosawa/system/kernel/src/fb/: display.rs  mod.rs  writer.rs
shinosawa/system/kernel/src/fs/: dummy.rs  mod.rs  vfs.rs
shinosawa/system/kernel/src/hal/: mod.rs
shinosawa/system/kernel/src/hal/x86_64/: acpi.rs  apic.rs  cpu.rs  frame_alloc.rs  gdt.rs  instruct.rs  interrupt.rs  mod.rs  paging.rs  syscall.rs
shinosawa/system/kernel/src/loader/: elf.rs  mod.rs
shinosawa/system/kernel/src/log/: mod.rs
shinosawa/system/kernel/src/logger/: logbuf.rs  mod.rs
shinosawa/system/kernel/src/memory/: alloc.rs  linked_list.rs  mod.rs
shinosawa/system/kernel/src/process/: mod.rs  process.rs  thread.rs
shinosawa/system/kernel/src/serial/: mod.rs
shinosawa/system/kotono/: Cargo.toml  README.md  build.rs
shinosawa/system/kotono/src/: main.rs
shinosawa/system/sysface/: Cargo.toml  README.md  linker-x86_64.ld
shinosawa/system/sysface/src/: lib.rs  linked_list.rs  memory.rs  syscall.rs
tools/: brd.sh  build_image.sh  emulate.sh  inspect.sh  run.sh  test.sh
tools/koukei/: Cargo.toml  README.md
tools/koukei/.cargo/: config.toml
tools/koukei/src/: build_image.rs  emulate.rs  main.rs
