
[package]
name = "shinosawa_system_kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
bench = false

[dependencies]
embedded-graphics = "0.8.1"
limine = "0.4.0"
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = {version = "1.5.0", features = ["spin_no_std"] }
spinning_top = "0.3.0"
uart_16550 = "0.3.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.2"
