
[package]
name = "shinosawa_system_kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
bench = false

[dependencies]
embedded-graphics = "0.8.1"
limine = "0.4.0"
conquer-once = { version = "0.4.0", default-features = false }
uart_16550 = "0.3.2"
pic8259 = "0.11.0"
spin = "0.10.0"
acpi = { version = "5.2.0", features = ["alloc"] }
x2apic = "0.5.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.2"
